# claude-ns-hub

./: .gitignore  .gitleaksignore  .pre-commit-config.yaml  .tg-last-sent.json  README.md  __init__.py  ctx-session-state.json  env.example  install-hooks.sh  last-cm-injection.json  last-retrieval-meta.json  pyproject.toml  requirements.txt  server.py  server.py.pre-mcp-20260608  settings.json  task-worker.sh
.omc/: decision_corpus.json
ee/: README.md
hooks/: bm25-memory.py  ctx-report.py  hub-mcp-server.py  northstar-action-log.py  northstar-precompact-busy.py  northstar-pretool-busy.py  northstar-session-start.py  northstar-stop-idle.py  northstar-subagent-busy.py  stop-playwright-detect.py  windows-stop.sh
hooks-dist/: pre-push
hooks/ctx-dashboard/: launch.sh  server.py
hooks/ctx-dashboard/static/: app.js  index.html  styles.css
hub/: server.py  verify.py
hub/projects/AIKB/: north-star.md
hub/projects/CTX/: north-star.md
hub/projects/Clone/: north-star.md
hub/projects/Driller/: north-star.md
hub/projects/EI/: north-star.md
hub/projects/FRWP/: north-star.md
hub/projects/FreeOS/: north-star.md
hub/projects/FromScratch/: north-star.md
hub/projects/HugwartsBanana/: north-star.md
hub/projects/MOAT/: north-star.md
hub/static/: index.html  market-signals.html  northstar.html
plugins/: known_marketplaces.json
scripts/: clone_telegram_report.py  extract_trace.py  heartbeat-stability-check.py  migrate_hub_tables.py  onboarding_smoke_test.py
skills/ameva/: SKILL.md
skills/pw-verify/: SKILL.md
static/: claude-md-preview.html  index.html  manifest.json  northstar.html
static/hooks/: bm25-memory.py  hub-mcp-server.py  northstar-action-log.py  northstar-precompact-busy.py  northstar-pretool-busy.py  northstar-stop-idle.py  northstar-subagent-busy.py  stone-ctx-hook.py
tests/: test_smoke_api.py
