[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-ns-hub"
version = "0.3.0"
description = "Personal AI project management hub — North Star milestone tracking, live Claude sessions, CTX context alignment."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "jaytoone", email = "be2jay67@gmail.com"},
]
keywords = ["ai", "project-management", "claude", "northstar", "milestones", "productivity"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Office/Business :: Scheduling",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "httpx>=0.27",
  "pyyaml>=6.0",
  "ptyprocess>=0.7; platform_system != 'Windows'",
  "psutil>=5.9",
  "anthropic>=0.28",
  "python-multipart>=0.0.9",  # required for FastAPI file upload endpoints
]

[project.scripts]
hub = "hub.server:main"
claude-ns-hub = "hub.server:main"
northstar-hub = "hub.server:main"

[project.urls]
Homepage = "https://github.com/jaytoone/claude-ns-hub"
Issues   = "https://github.com/jaytoone/claude-ns-hub/issues"

[tool.setuptools]
packages = ["hub"]
package-dir = {"hub" = "."}

[tool.setuptools.package-data]
hub = ["static/*", "static/**/*"]
