[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-ns-hub"
version = "0.3.13"
description = "Personal AI project management hub — North Star milestone tracking, live Claude sessions, CTX context alignment."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "pluto2060", email = "be2jay67@gmail.com"},
]
keywords = ["ai", "project-management", "claude", "northstar", "milestones", "productivity"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Office/Business :: Scheduling",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "httpx>=0.27",
  "pyyaml>=6.0",
  "ptyprocess>=0.7; platform_system != 'Windows'",
  "psutil>=5.9",
  "anthropic>=0.28",
  "python-multipart>=0.0.9",  # required for FastAPI file upload endpoints
]

[project.scripts]
hub = "hub.server:main"
claude-ns-hub = "hub.server:main"
northstar-hub = "hub.server:main"

[project.urls]
Homepage = "https://github.com/pluto2060/claude-ns-hub"
Issues   = "https://github.com/pluto2060/claude-ns-hub/issues"

[tool.setuptools]
packages = ["hub"]
package-dir = {"hub" = "."}

[tool.setuptools.package-data]
hub = [
  "static/northstar.html",
  "static/index.html",
  "static/favicon.svg",
  "static/hooks/*.py",
  "static/hooks/*.sh",
  "scripts/onboarding_smoke_test.py",
]

[tool.setuptools.exclude-package-data]
hub = [
  "hub-dataset-export.py",
  "hub-dataset-stats.py",
  "hub-windows-install.bat",
  "dataset/*",
  "docs/*",
  "ARCHITECTURE.md",
  "*.db",
  "*.db-shm",
  "*.db-wal",
  "*.bak*",
  "*.log",
  "*.json",
  "*.jsonl",
  "*.yaml",
  "*.yml",
  "dist/*",
  "build/*",
  "__pycache__/*",
  "*.pyc",
  "*.egg-info/*",
  "backup-*",
  "_archive-*",
  "corpora/*",
  "corpus/*",
  "entity/*",
  "uploads/*",
  "certs/*",
  "ctx-dashboard/*",
  "task-locks/*",
  "task-queue/*",
  "task-results/*",
]
